# stm32_401_rust_project_template

./: Cargo.toml  README.md  build_and_flash.sh  gdbinit.cfg  memory.x  openocd_gdb_debug.sh
.cargo/: config
src/: main.rs
