[package]
name = "stm32_blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"
debug-assertions = false
overflow-checks = true
lto = true
incremental = false
codegen-units = 1
rpath = false
strip = "debuginfo"

[dependencies]

#stm32f4 = {version = "0.15", features = ["stm32f401", "rt"]}
stm32f4xx-hal = { version = "0.13", features = [ "stm32f401" ] }

embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
